# alleno-ora-TUI

./: .gitignore  README.md  \
database/: workouts.db
demo/: demo.webm
src/: 2  CMakeLists.txt  build.sh  config.txt  main  main.c  todo.norg  utils.c  utils.h  workouts.txt
